--- a/task03.html
+++ b/task03.html
@@ -1,10 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8">
+    <title>IFE JavaScript Task 01</title>
 </head>
 <body>
-$END$
+
+<ul id="source">
+    <li>北京空气质量：<b>90</b></li>
+    <li>上海空气质量：<b>70</b></li>
+    <li>天津空气质量：<b>80</b></li>
+    <li>广州空气质量：<b>50</b></li>
+    <li>深圳空气质量：<b>40</b></li>
+    <li>福州空气质量：<b>32</b></li>
+    <li>成都空气质量：<b>90</b></li>
+</ul>
+
+<ul id="resort">
+    <!--
+    <li>第一名：北京空气质量：<b>90</b></li>
+    <li>第二名：北京空气质量：<b>90</b></li>
+    <li>第三名：北京空气质量：<b>90</b></li>
+     -->
+
+</ul>
+
+<button id="sort-btn">排序</button>
+
+<script type="text/javascript">
+
+    /**
+     * getData方法
+     * 读取id为source的列表，获取其中城市名字及城市对应的空气质量
+     * 返回一个数组，格式见函数中示例
+     */
+    function getData() {
+        /*
+         coding here
+         */
+
+        /*
+         data = [
+         ["北京", 90],
+         ["北京", 90]
+         ……
+         ]
+         */
+        var sourceli = document.querySelector("#source").querySelectorAll("li");
+        var data = [];
+        sourceli.forEach(function (item, index, array) {
+            var city = array[index].innerHTML.split("空气质量：")[0];//string.split()拆分和array.join()连接是相反的。
+            var num = array[index].outerText.split("空气质量：")[1];
+            data.push([city, num]);
+        });
+        return data;
+    }
+
+
+    /**
+     * sortAqiData
+     * 按空气质量对data进行从小到大的排序
+     * 返回一个排序后的数组
+     */
+    function sortAqiData(data) {
+        data.sort(function (a, b) {
+            return a[1] - b[1];
+        });
+        return (data);
+    }
+    /* console.log(getData());
+     console.log(sortAqiData(getData()));*/
+    /**
+     * render
+     * 将排好序的城市及空气质量指数，输出显示到id位resort的列表中
+     * 格式见ul中的注释的部分
+     */
+    function render(data) {
+        var resortUl = document.querySelector("#resort");
+
+//        data.forEach(function (item, index, array) {
+//            var lis = document.createElement('li');
+//            lis.innerHTML += array[index][0] + array[index][1];
+//            resortUl.appendChild(lis);
+//        });
+        var maps = data.map(function (item, index, array) {
+            var lis = document.createElement("li");
+            var i = index + 1;
+            lis.innerHTML += "第" + i + "名：" + array[index][0] + "空气质量：" + array[index][1];
+            return lis.outerHTML;
+        });
+        resortUl.innerHTML = maps.join("");
+    }
+
+
+    function btnHandle() {
+        var aqiData = getData();
+        aqiData = sortAqiData(aqiData);
+        render(aqiData);
+    }
+
+    function init() {
+
+        // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
+        var btn = document.querySelector("#sort-btn").addEventListener("click", function () {
+            btnHandle()
+        });
+    }
+
+    init();
+
+</script>
 </body>
 </html>
