--- a/task03.html
+++ b/task03.html
@@ -109,6 +109,14 @@
 
     init();
 
+    /*
+     总结：
+     querySelector和querySelectorAll
+     addEventListener
+     map
+     string.aplit()和array.join()
+     */
+
 </script>
 </body>
 </html>
