--- a/task03.html
+++ b/task03.html
@@ -114,7 +114,7 @@
      querySelector和querySelectorAll
      addEventListener
      map
-     string.aplit()和array.join()
+     string.split()和array.join()
      */
 
 </script>
