--- a/task03.html
+++ b/task03.html
@@ -46,17 +46,33 @@
          ……
          ]
          */
-        var sourceli = document.querySelector("#source").querySelectorAll("li");
-        var data = [];
-        sourceli.forEach(function (item, index, array) {
+        var sourceli = document.querySelectorAll("#source li");
+        /*
+         //方法一：
+         var data = [];
+         sourceli.forEach(function (item, index, array) {
+         var city = array[index].innerHTML.split("空气质量：")[0];//string.split()拆分和array.join()连接是相反的。
+         var num = array[index].outerText.split("空气质量：")[1];
+         data.push([city, num]);
+         });
+         return data;*/
+
+        var data = Array.prototype.map.call(sourceli, function (item, index, array) {
             var city = array[index].innerHTML.split("空气质量：")[0];//string.split()拆分和array.join()连接是相反的。
             var num = array[index].outerText.split("空气质量：")[1];
-            data.push([city, num]);
+            return [city, num];
         });
+
+//        sourceli.map(function (item, index, array) {
+//            var city = array[index].innerHTML.split("空气质量：")[0];//string.split()拆分和array.join()连接是相反的。
+//            var num = array[index].outerText.split("空气质量：")[1];
+//            var a = [city, num];
+//            return a;
+//        });
         return data;
     }
 
-
+    getData();
     /**
      * sortAqiData
      * 按空气质量对data进行从小到大的排序
@@ -66,7 +82,7 @@
         data.sort(function (a, b) {
             return a[1] - b[1];
         });
-        return (data);
+        return data;
     }
     /* console.log(getData());
      console.log(sortAqiData(getData()));*/
@@ -91,20 +107,21 @@
         });
         resortUl.innerHTML = maps.join("");
     }
-
+    var btns = document.querySelector("#sort-btn");
 
     function btnHandle() {
         var aqiData = getData();
         aqiData = sortAqiData(aqiData);
         render(aqiData);
+        btns.removeEventListener("click", btnHandle);
+        alert(123);
     }
 
     function init() {
 
         // 在这下面给sort-btn绑定一个点击事件，点击时触发btnHandle函数
-        var btn = document.querySelector("#sort-btn").addEventListener("click", function () {
-            btnHandle()
-        });
+        btns.addEventListener("click", btnHandle, false);
+//
     }
 
     init();
