--- a/task04.html
+++ b/task04.html
@@ -101,8 +101,8 @@
 
     inout.addEventListener("click", function () {
         remove(event.target);
+        console.log(event);
     }, false);
-    
 
 
 </script>
