--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -11,9 +11,178 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="ielts-content">
+<div class="content">
+    <div class="ielts-top">
+        <div class="ielts-top-title">环球雅思少儿英语</div>
+        <div class="ielts-top-content">
+            <ul class="ielts-top-num">
+                <li class="ielts-top-circle">
+                    <span class="ielts-top-span">58</span><br>
+                    评论
+                </li>
+                <li class="ielts-top-circle">
+                    <span class="ielts-top-span">180</span><br>
+                    关注
+                </li>
+                <li class="ielts-top-circle">
+                    <span class="ielts-top-span">780</span><br>
+                    访问
+                </li>
+            </ul>
+            <span class="ielts-top-img">
+            </span>
+            <a href="http://www.haiziwang.com/" target="_blank">
+                <img src="img/top-vr.png" class="ielts-top-vr">
+            </a>
+        </div>
+    </div>
+    <div class="ielts-content">
+        <div class="nav-title ">
+            <ul class="clearfix">
+                <li>主页</li>
+                <li>课程</li>
+                <li>老师</li>
+                <li>环境</li>
+            </ul>
+        </div>
+        <div class="nav-content">
+            <div class="nav-content-div">
+                <div class="pagemain-hot">
+                    <span class="pagemain-hotone">头条</span>
+                    <span class="pagemain-hot-title">《名校启动工作室》寒假班火热报名中!</span>
+                </div>
+                <div class="pagemain-content">
+                    <div class="pagemain-title">
+                        <span class="pagemain-content-l green"></span>
+                        <span class="pagemain-content-title">机构简介</span>
+                    </div>
+                    <div class="pagemain-content-int">
+                        <p class="pagemain-content-word">
+                            <span class="pagemain-content-word-span">资质：</span>
+                            教育机构
+                        </p>
+                        <p class="pagemain-content-word">
+                            <span class="pagemain-content-word-span">特色：</span>
+                            <span class="pagemain-content-greenword">双语教学</span>
+                            <span class="pagemain-content-greenword">免费停车</span>
+                        </p>
+                        <p class="pagemain-content-word">
+                            <span class="pagemain-content-word-span">介绍：</span>
+                            环球雅思少儿英语，最专业的少儿英语培训，环球雅思少儿英语，最专业的少儿英语培训，
+                        </p>
+                    </div>
+                    <div class="pagemain-content-word pagemain-content-address">
+                        <span class="pagemain-content-word-span">地址：</span>
+                        南京市中山东路311-2号
+                        <a href="http://www.haiziwang.com/"></a>
+                    </div>
 
+
+                </div>
+                <div class="pagemain-content">
+                    <div class="pagemain-title">
+                        <span class="pagemain-content-l red"></span>
+                        <span class="pagemain-content-title">活动资讯</span>
+                    </div>
+                    <div class="pagemain-content-int">
+                        <a href="http://www.haiziwang.com/">
+                            <img src="img/img1.png" class="pagemain-content-img">
+                        </a>
+                        <p class="pagemain-content-word active">
+                            环球雅思少儿游乐会<br>
+                            <span class="pagemain-content-word-span">欢迎大家参加这样的活动，带孩子一起玩</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="pagemain-content course">
+                    <div class="pagemain-title">
+                        <span class="pagemain-content-l green"></span>
+                        <span class="pagemain-content-title">在线课程</span>
+                        <a href="http://www.haiziwang.com/" alt="point">
+                            <span class="allcourse">全部课程></span>
+                        </a>
+                    </div>
+                    <div class="course-img">
+                        <a href="http://www.haiziwang.com/">
+                            <img src="img/img2.png" alt="课程">
+                        </a>
+                        <div class="course-online">
+                            <a href="" class="online-title">视频课程</a>
+                            <a href="" class="online-num">30节课时</a>
+                        </div>
+                        <div>
+                            <span class="course-title">乖宝宝游泳</span>
+                            <span class="course-discount">￥2880</span>
+                            <span class="course-price">￥1880</span>
+                        </div>
+                    </div>
+                    <div class="course-img">
+                        <a href="http://www.haiziwang.com/">
+                            <img src="img/img2.png" alt="课程">
+                        </a>
+                        <div class="course-online">
+                            <a href="" class="online-title">视频课程</a>
+                            <a href="" class="online-num">28节课时</a>
+                        </div>
+                        <div>
+                            <span class="course-title">宝宝学钢琴</span>
+                            <span class="course-discount">￥10880</span>
+                            <span class="course-price">￥8888</span>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="pagemain-content course">
+                    <div class="pagemain-title">
+                        <span class="pagemain-content-l blue"></span>
+                        <span class="pagemain-content-title">线下课程</span>
+                        <a href="http://www.haiziwang.com/" alt="point">
+                            <span class="allcourse">全部课程></span>
+                        </a>
+                    </div>
+                    <div class="course-img">
+                        <a href="http://www.haiziwang.com/">
+                            <img src="img/img2.png" alt="课程">
+                        </a>
+                        <div class="course-offline">
+                            <a href="" class="offline-title">玄武区中山路185号</a>
+                            <a href="" class="offline-add">1.8km</a>
+                        </div>
+                        <div>
+                            <span class="course-title">舞蹈课程</span>
+                            <span class="course-price">￥1200</span>
+                        </div>
+                    </div>
+                    <div class="course-img">
+                        <a href="http://www.haiziwang.com/">
+                            <img src="img/img2.png" alt="课程">
+                        </a>
+                        <div class="course-offline">
+                            <a href="" class="offline-title">玄武区中山路185号</a>
+                            <a href="" class="offline-add">1.8km</a>
+                        </div>
+                        <div>
+                            <span class="course-title">宝宝学钢琴</span>
+                            <span class="course-price">￥8888</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="pagemain-content">
+                    <span class="pagemain-content-l green"></span>
+                    <span class="pagemain-content-title">用户评价</span>
+                </div>
+
+
+            </div>
+            <div class="nav-content-div">课程</div>
+            <div class="nav-content-div">老师</div>
+            <div class="nav-content-div">环境</div>
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
