--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -76,8 +76,6 @@
                         南京市中山东路311-2号
                         <a href="http://www.haiziwang.com/"></a>
                     </div>
-
-
                 </div>
                 <div class="pagemain-content">
                     <div class="pagemain-title">
@@ -169,14 +167,161 @@
                     </div>
                 </div>
                 <div class="pagemain-content">
-                    <span class="pagemain-content-l green"></span>
-                    <span class="pagemain-content-title">用户评价</span>
+                    <div class="pagemain-title evaluate">
+                        <span class="pagemain-content-l green"></span>
+                        <span class="pagemain-content-title">用户评价</span>
+                        <span class="evaluate-num">(共11条)</span>
+                    </div>
+                    <div class="pagemain-evaluate">
+                        <ul class="evaluate-li">
+                            <li class="clearfix">
+                                <div class="evaluate-li-left">
+                                    <a href="http://www.haiziwang.com/">
+                                        <img src="img/evaluateheadimg.png" alt="头像" class="evaluate-headimg">
+                                    </a>
+                                </div>
+                                <div class="evaluate-li-right">
+                                    <div class="evaluate-r-top">
+                                        <span class="evaluate-name">美丽心情</span>
+                                        <span class="evaluate-time">2小时前</span>
+                                    </div>
+                                    <p class="evaluate-r-content">
+                                        老师讲课很认真，孩子觉得也听得懂，老师讲课很认真，孩子觉得也听得懂，老师讲课很认真，孩子觉得也听得懂，老师讲课很认真，孩子觉得也听得懂，
+                                        老师讲课很认真，孩子觉得也听得
+                                    </p>
+                                </div>
+                            </li>
+                            <hr>
+                            <li class="clearfix">
+                                <div class="evaluate-li-left">
+                                    <a href="http://www.haiziwang.com/">
+                                        <img src="img/evaluateheadimg.png" alt="头像" class="evaluate-headimg">
+                                    </a>
+                                </div>
+                                <div class="evaluate-li-right">
+                                    <div class="evaluate-r-top">
+                                        <span class="evaluate-name">美丽心情</span>
+                                        <span class="evaluate-time">2小时前</span>
+                                    </div>
+                                    <p class="evaluate-r-content">
+                                        老师讲课很认真，孩子觉得也听得懂，老师讲课很认真，孩子觉得也听得懂，老师讲课很认真，孩子觉得也听得懂
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="http://www.haiziwang.com/" class="all-evaluate">
+                        全部评价>
+                    </a>
                 </div>
-
-
             </div>
-            <div class="nav-content-div">课程</div>
-            <div class="nav-content-div">老师</div>
+            <div class="nav-content-div">
+                <div class="pagemain-content">
+                    <div class="course-page">
+                        <div class="course-pagetop clearfix">
+                            <div class="course-pagetopl">
+                                <a href="http://www.haiziwang.com/">
+                                    <img src="img/course1.png" alt="course">
+                                </a>
+                            </div>
+                            <div class="course-pagetopr">
+                                <div class="course-pagetoprtitle">小水手亲子乐园</div>
+                                <div class="course-pagetopradd">环球雅思少儿英语新街口中心</div>
+                                <div class="course-pagetoprmoney">
+                                    <span class="course-pagetoprmoneyl">￥1780</span>
+                                    <span class="course-pagetoprmoneyr">30节课</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course-pagebottom clearfix">
+                            <span class="course-pagebottoml">开班：8月31号-10月31号</span>
+
+                            <span class="course-pagebottomr">1.8km</span>
+                            <span class="course-pagebottomrimg">
+                                <img src="img/address.png" alt="address">
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="pagemain-content">
+                    <div class="course-page">
+                        <div class="course-pagetop clearfix">
+                            <div class="course-pagetopl">
+                                <a href="http://www.haiziwang.com/">
+                                    <img src="img/course2.png" alt="course">
+                                </a>
+                            </div>
+                            <div class="course-pagetopr">
+                                <div class="course-pagetoprtitle">好妈妈儿童英语</div>
+                                <div class="course-pagetopradd">环球雅思少儿英语</div>
+                                <div class="course-pagetoprmoney">
+                                    <span class="course-pagetoprmoneyl">￥1780</span>
+                                    <span class="course-pagetoprmoneyr">30节课</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="course-pagebottom clearfix">
+                            <span class="course-pagebottoml">在线视频课程</span>
+                            <span class="course-pagebottomr">有效期150天</span>
+                            <span class="course-pagebottomrimg">
+                                <img src="img/time.png" alt="time">
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="nav-content-div">
+                <div class="teacher clearfix">
+                    <div class="teacher-left">
+                        <img src="img/teacher.png" alt="teacher">
+                    </div>
+                    <div class="teacher-right">
+                        <div class="teacher-rname">
+                            <span class="teacher-rnamel">王子娇</span>
+                            <span class="teacher-rnamer">教龄4年</span>
+                        </div>
+                        <div class="teacher-rschool">毕业院校：北京外国语大学</div>
+                        <div class="teacher-rlevel">
+                            <img src="img/abc.png" alt="">
+                            <span>英语-少儿英语</span>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="teacher clearfix">
+                    <div class="teacher-left">
+                        <img src="img/teacher.png" alt="teacher">
+                    </div>
+                    <div class="teacher-right">
+                        <div class="teacher-rname">
+                            <span class="teacher-rnamel">王子娇</span>
+                            <span class="teacher-rnamer">教龄4年</span>
+                        </div>
+                        <div class="teacher-rschool">毕业院校：北京外国语大学</div>
+                        <div class="teacher-rlevel">
+                            <img src="img/abc.png" alt="">
+                            <span>英语-少儿英语</span>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="teacher clearfix">
+                    <div class="teacher-left">
+                        <img src="img/teacher.png" alt="teacher">
+                    </div>
+                    <div class="teacher-right">
+                        <div class="teacher-rname">
+                            <span class="teacher-rnamel">王子娇</span>
+                            <span class="teacher-rnamer">教龄4年</span>
+                        </div>
+                        <div class="teacher-rschool">毕业院校：北京外国语大学</div>
+                        <div class="teacher-rlevel">
+                            <img src="img/abc.png" alt="">
+                            <span>英语-少儿英语</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="nav-content-div">环境</div>
         </div>
     </div>
